<resources>
    <string name="app_name">DocDoc</string>

    <!-- stringhe per pulsanti -->
    <string name="continua">Continua</string>
    <string name="indietro">Indietro</string>
    <string name="elimina">Elimina</string>
    <string name="entra">Entra</string>
    <string name="registrati">Registrati</string>
    <string name="elimina_account">Elimina Account</string>
    <string name="aggiungi_evento">Aggiungi un evento&#8230;</string>
    <string name="aggiungi_file">Aggiungi un file&#8230;</string>
    <string name="seleziona_data">Seleziona una data</string>
    <string name="seleziona_ora">Seleziona l\'ora</string>
    <string name="salva">Salva</string>
    <string name="disponibilita">Slot Disponibile</string>
    <string name="accedi">Accedi</string>
    <string name="profilo_medico">Profilo Medico</string>



    <!-- stringhe per label -->
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="pw_2">Conferma password</string>
    <string name="cf">Codice Fiscale</string>
    <string name="tel">Numero di telefono</string>
    <string name="res">Indirizzo di residenza</string>
    <string name="locazione_ambulatorio">Dove si trova l\'ambulatorio</string>
    <string name="medico">Chi è il tuo medico?</string>
    <string name="indirizzo_ambulatorio">Indirizzo ambulatorio</string>
    <string name="tel_amb">Numero di telefono ambulatorio</string>
    <string name="empty">null</string>
    <string name="Cart_clinica">Cartella clinica</string>
    <string name="Dati_pers">Dati personali</string>
    <string name="data">Data</string>
    <string name="ora">Ora</string>
    <string name="descrizione">Descrizione</string>
    <string name="ambulatorio">Ambulatorio</string>
    <string name="motivo">Motivo</string>
    <string name="file_inseriti">File inseriti</string>
    <string name="farmaci">Farmaci</string>
    <string name="malattie">Malattie</string>
    <string name="orario_random">10:00</string>
    <string name="filename">filename.txt</string>
    <string name="prenotazioni">Le tue prenotazioni...</string>
    <string name="list_pazienti">I miei Pazienti...</string>


    <!-- stringhe per hints (placholders) -->
    <string name="inserisci_nome">Inserisci il tuo nome&#8230;</string> <!-- &#8230; rappresenta ... altrimenti si ottiene warning -->
    <string name="inserisci_cognome">Inserisci il tuo cognome&#8230;</string>
    <string name="inserisci_email">Inserisci la tua email&#8230;</string>
    <string name="inserisci_pw">Inserisci la tua password&#8230;</string>
    <string name="conferma_pw">Conferma la tua password&#8230;</string>
    <string name="inserisci_CF">Inserisci il tuo codice fiscale&#8230;</string>
    <string name="inserisci_tel">Inserisci il tuo numero di telefono&#8230;</string>
    <string name="inserisci_res">Inserisci il tuo indirizzo&#8230;</string>
    <string name="inserisci_medico">Seleziona il tuo medico&#8230;</string>
    <string name="inserisci_amb">Inserisci l\'indirizzo&#8230;</string>
    <string name="inserisci_descrizione">Inserisci una breve descrizione relativa alla visita da sostenere&#8230;</string>
    <string name="inserisci_descrizione1">Inserisci una breve descrizione&#8230;</string>
    <string name="inserisci_malattia">Inserisci una malattia&#8230;</string>
    <string name="inserisci_farmaco">Inserisci un farmaco&#8230;</string>
    <string name="cerca_paziente">Cerca un paziente&#8230;</string>
    <string name="prenota_a_questo_orario">Prenota a questo orario</string>

    <!-- stringhe per radio button -->
    <string name="sono_paziente">Sono un paziente</string>
    <string name="sono_medico">Sono un medico</string>

    <!-- stringhe per pulsanti home -->
    <string name="prenota">Prenota</string>
    <string name="home">Home</string>
    <string name="Profilo">Profilo</string>
    <string name="modifica">Modifica</string>
</resources>