<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.widget.TextView
            android:id="@+id/label_nome"
            style="@style/style_Label"
            android:text="@string/nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.EditText
            android:id="@+id/edit_nome"
            style="@style/style_EditText"
            android:hint="@string/inserisci_nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_nome" />

        <android.widget.TextView
            android:id="@+id/label_cognome"
            style="@style/style_Label"
            android:text="@string/cognome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nome" />

        <android.widget.EditText
            android:id="@+id/edit_cognome"
            style="@style/style_EditText"
            android:hint="@string/inserisci_cognome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_cognome" />

        <android.widget.TextView
            android:id="@+id/label_CF"
            style="@style/style_Label"
            android:text="@string/cf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_cognome" />

        <android.widget.EditText
            android:id="@+id/edit_CF"
            style="@style/style_EditText"
            android:hint="@string/inserisci_CF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_CF" />

        <android.widget.TextView
            android:id="@+id/label_ambulatorio"
            style="@style/style_Label"
            android:text="@string/indirizzo_ambulatorio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_CF" />

        <android.widget.EditText
            android:id="@+id/edit_ambulatorio"
            style="@style/style_EditText"
            android:hint="@string/inserisci_amb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_ambulatorio" />

        <android.widget.TextView
            android:id="@+id/label_tel_amb"
            style="@style/style_Label"
            android:text="@string/tel_amb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_ambulatorio" />

        <android.widget.EditText
            android:id="@+id/edit_tel_amb"
            style="@style/style_EditText"
            android:hint="@string/inserisci_tel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_tel_amb" />

    </androidx.constraintlayout.widget.ConstraintLayout>