<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.docdoc.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.TextView
            android:id="@+id/label_nome"
            style="@style/style_Label"
            android:text="@string/nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.EditText
            android:id="@+id/edit_nome"
            style="@style/style_EditText"
            android:hint="@string/inserisci_nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_nome" />

        <android.widget.TextView
            android:id="@+id/label_cognome"
            style="@style/style_Label"
            android:text="@string/cognome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nome" />

        <android.widget.EditText
            android:id="@+id/edit_cognome"
            style="@style/style_EditText"
            android:hint="@string/inserisci_cognome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_cognome" />

        <android.widget.TextView
            android:id="@+id/label_tel"
            style="@style/style_Label"
            android:text="@string/tel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_cognome" />

        <android.widget.EditText
            android:id="@+id/edit_tel"
            style="@style/style_EditText"
            android:hint="@string/inserisci_tel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_tel" />

        <android.widget.TextView
            android:id="@+id/label_CF"
            style="@style/style_Label"
            android:text="@string/cf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_tel" />

        <android.widget.EditText
            android:id="@+id/edit_CF"
            style="@style/style_EditText"
            android:hint="@string/inserisci_CF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_CF" />


        <android.widget.RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_CF">

            <android.widget.RadioButton
                android:id="@+id/radio_paziente"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/sono_paziente" />

            <android.widget.RadioButton
                android:id="@+id/radio_medico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sono_medico" />

        </android.widget.RadioGroup>

        <android.widget.GridLayout
            style="@style/style_layout_doppio_button"
            android:id="@+id/grid_doppio_button"
            android:columnCount="2"
            android:rowCount="1"

            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.widget.Button
                style="@style/style_Button.blue"
                android:id="@+id/button_indietro"
                android:text="@string/indietro"
                android:layout_column="0"
                android:layout_row="0"/>

            <android.widget.Button
                style="@style/style_Button.green"
                android:id="@+id/button_continua"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="20dp"
                android:text="@string/continua" />
        </android.widget.GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>