<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.TextView
        android:id="@+id/label_email"
        style="@style/style_Label"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <android.widget.EditText
        style="@style/style_EditText"
        android:id="@+id/edit_email"
        android:hint="@string/inserisci_email"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <android.widget.TextView
        style="@style/style_Label"
        android:id="@+id/label_pw"
        android:text="@string/pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <android.widget.EditText
        style="@style/style_EditText"
        android:id="@+id/edit_pw"
        android:hint="@string/inserisci_pw"
        app:layout_constraintTop_toBottomOf="@id/label_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.widget.TextView
        style="@style/style_Label"
        android:id="@+id/label_conf_pw"
        android:text="@string/pw_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pw" />

    <android.widget.EditText
        style="@style/style_EditText"
        android:id="@+id/conf_pw"
        android:hint="@string/conferma_pw"
        app:layout_constraintTop_toBottomOf="@id/label_conf_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>