<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.docdoc.viewmodel.EventoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.TextView
            android:id="@+id/label_motivo"
            style="@style/style_Label"
            android:text="@string/motivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.EditText
            android:id="@+id/edit_motivo"
            style="@style/style_EditText"
            android:hint="@string/inserisci_malattia"
            android:text="@={viewModel.event.motivo}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_motivo" />

        <android.widget.TextView
            android:id="@+id/label_data"
            style="@style/style_Label"
            android:text="@string/data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_motivo" />

        <android.widget.Button
            style="@style/style_Button.aggiungiEvento"
            android:id="@+id/button_editData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_data"
            android:hint="@string/seleziona_data"
            android:text="@={viewModel.event.data}"
            android:textColor="@color/black70"
            android:drawableStart="@drawable/ic_date" />

        <android.widget.TextView
            android:id="@+id/label_descrizione"
            style="@style/style_Label"
            android:text="@string/descrizione"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_editData" />

        <android.widget.EditText
            android:id="@+id/edit_descrizione"
            style="@style/style_EditText"
            android:singleLine="false"
            android:layout_height="wrap_content"
            android:hint="@string/inserisci_descrizione1"
            android:text="@={viewModel.event.descrizione}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_descrizione" />

        <android.widget.Button
            style="@style/style_Button.aggiungiEvento"
            android:id="@+id/button_aggFile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_descrizione"
            android:text="@string/aggiungi_file"
            android:textColor="@color/black70"
            android:drawableEnd="@drawable/ic_upload"
            android:drawableStart="@drawable/ic_file" />

        <android.widget.TextView
            android:id="@+id/label_file_inseriti"
            style="@style/style_Label"
            android:text="@string/file_inseriti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_aggFile"  />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/label_file_inseriti"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>