<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_reg_2_paz"
    >

    <android.widget.TextView
        android:id="@+id/label_res"
        style="@style/style_Label"
        android:text="@string/res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.EditText
        android:id="@+id/edit_res"
        style="@style/style_EditText"
        android:hint="@string/inserisci_res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_res" />

    <android.widget.TextView
        style="@style/style_Label"
        android:id="@+id/sel_med"
        android:text="@string/medico"

        app:layout_constraintTop_toBottomOf="@id/edit_res"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.widget.SearchView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:queryHint="@string/inserisci_medico"
        android:background="@drawable/rounded_rectangle"

        app:layout_constraintTop_toBottomOf="@id/sel_med"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>