<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/rounded_rectangle_green"
    android:layout_marginTop="10dp">

    <android.widget.TextView
        android:id="@+id/show_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:text="@string/data"
        />

    <android.widget.TextView
        android:id="@+id/show_orario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orario_random"
        />

    <android.widget.TextView
        android:id="@+id/show_slot_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/descrizione"/>

</LinearLayout>