<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.docdoc.viewmodel.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.TextView
            android:id="@+id/label_ambulatorio"
            style="@style/style_Label"
            android:text="@string/locazione_ambulatorio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.EditText
            android:id="@+id/edit_ambulatorio"
            style="@style/style_EditText"
            android:hint="@string/inserisci_amb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_ambulatorio" />

        <android.widget.GridLayout
            style="@style/style_layout_doppio_button"
            android:id="@+id/grid_doppio_button"
            android:columnCount="2"
            android:rowCount="1"

            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_ambulatorio"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.widget.Button
                style="@style/style_Button.blue"
                android:id="@+id/button_indietro"
                android:text="@string/indietro"
                android:layout_column="0"
                android:layout_row="0"/>

            <android.widget.Button
                style="@style/style_Button.green"
                android:id="@+id/button_continua"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="20dp"
                android:text="@string/continua" />
        </android.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>